# devops

./: CMakeLists.txt  Dockerfile  Dockerfile_old
.github/workflows/: CI_Docker.yml  Googletest_CI.yml  staticanalysis.yml
cicd/: test.txt
src/: main.cpp  my_lib.cpp  my_lib.h
tests/: test_my_lib.cpp
